style: fix footer map on mobile devices

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -69,6 +69,7 @@
 .mapFigure {
     margin: -40px 0 0;
     min-width: 200px;
+    min-height: 300px;
     height: 100%;
     position: relative;
 }
